picostrap5-child-base/sass/_custom.scss
/* ... */
#lc-interface {
  font-size: 12px !important;
}

.lc-contextual-menu a {
  font-size: 12px !important;
  letter-spacing: 0px;
}

/* width */
::-webkit-scrollbar {
  width: 3px;
}

.hide-scrollbar ::-webkit-scrollbar {
  width: 0;
}

/* Track */
::-webkit-scrollbar-track {
  background: #121212;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #433e3e;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
}

//---------- typography ----------

// h1 strong {
//   font-size: 90px !important;
// }

h1 {
  font-size: 50px !important;
}

h2,
.event-date p,
.contact-page .event-date p {
  font-size: 45px !important;
}

h3 {
  font-size: 60px !important;
}

p {
  font-size: 50px !important;
}

a,
a:visited {
  font-size: 50px !important;
  text-decoration: none !important;
  letter-spacing: 15px;
}

li {
  font-size: 55px !important;
}

#wpadminbar * {
  font-size: 13px !important;
}

/* Media Queries */

@media only screen and (max-width: 1199px) {
  h1 {
    font-size: 45px !important;
  }

  h2 {
    font-size: 55px !important;
  }

  .event-date p,
  .contact-page .event-date p {
    font-size: 40px !important;
  }

  h3 {
    font-size: 40px !important;
  }

  p,
  a,
  li {
    font-size: 45px !important;
  }
}

@media only screen and (max-width: 767px) {
  h1 {
    font-size: 30px !important;
  }

  h1 i {
    font-size: 35px !important;
  }

  h2 {
    font-size: 38px !important;
  }

  .event-date p,
  .contact-page .event-date p {
    font-size: 30px !important;
  }

  h3 {
    font-size: 20px !important;
  }

  p,
  a,
  li {
    font-size: 30px !important;
  }

  a {
    letter-spacing: 2px;
  }
}

//---------- font family classes ----------

.san-serif-1 > * {
  font-family: Karla;
}

.san-serif-1 b,
.san-serif-1 strong {
  font-family: rig-solid-bold-halftone, sans-serif;
}

.san-serif-2 > * {
  font-family: rig-solid-bold-halftone, sans-serif;
}

//---------- text drop shadows ----------

.text-shadow h1,
.text-shadow h2,
.text-shadow p,
.text-shadow a {
  // text-shadow: 3px 3px 3px #000;
  filter: drop-shadow(2px 4px 6px black);
}

.text-shadow-secondary-neon a {
  color: var(--bs-secondary) !important;
  text-shadow: 0 0 10px var(--bs-secondary);
}
.text-shadow-secondary-neon p {
  color: var(--bs-secondary) !important;
  text-shadow: 0 0 10px var(--bs-secondary);
}
.text-shadow-secondary-neon h1 {
  color: var(--bs-secondary) !important;
  text-shadow: 0 0 10px var(--bs-secondary);
}

//---------- img ----------

img {
  display: block;
}

figure {
  margin: 0;
}

//---------- buttons ----------

#homepage .btn {
  padding-left: 0;
  padding-right: 0;
  filter: drop-shadow(2px 4px 6px black);
}

#menuBtn a {
  font-size: 200px !important;
  // backdrop-filter: contrast(10) invert(1);
  // -webkit-backdrop-filter: contrast(10) invert(1);
  padding-left: 30px !important;
  padding-right: 30px !important;
  // border: 1px solid var(--bs-secondary);
  border-radius: 10px;
  // background: #393939d6;
  transition: all ease 0.3s;
  background-color: var(--bs-secondary);
  color: var(--bs-dark) !important;
  border: 3px solid var(--bs-dark);
  box-shadow: 0px 0px 30px var(--bs-secondary);
  filter: drop-shadow(2px 4px 6px black);
}

#reservationBtn a {
  font-size: 75px !important;
  // backdrop-filter: contrast(10) invert(1);
  // -webkit-backdrop-filter: contrast(10) invert(1);
  padding-left: 30px !important;
  padding-right: 30px !important;
  // border: 1px solid var(--bs-secondary);
  border-radius: 10px;
  // background: #393939d6;
  letter-spacing: 5px;
  transition: all ease 0.3s;
  background: url(https://www.letloosechicago.com/wp-content/uploads/2021/11/chalk-bg-small.jpg);
  color: var(--bs-secondary) !important;
  border: 1px solid var(--bs-secondary);
  // box-shadow: 0px 0px 10px var(--bs-secondary);
  filter: drop-shadow(2px 4px 6px black);
}

#menuBtn a:hover,
#menuBtn a:active,
#menuBtn a:focus {
  transform: scale(1.06);
  // background-color: var(--bs-dark);
  color: #ffffff !important;
  background: url(https://www.letloosechicago.com/wp-content/uploads/2021/11/chalk-bg-small.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-color: var(--bs-secondary);
  box-shadow: 0px 0px 100px var(--bs-secondary);
}

#reservationBtn a:hover,
#reservationBtn a:active,
#reservationBtn a:focus {
  transform: scale(1.05);
  // background-color: var(--bs-dark);
  color: var(--bs-dark) !important;
  background: var(--bs-secondary);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  border-color: var(--bs-dark);
  // border-width: 3px;
  box-shadow: 0px 0px 50px var(--bs-secondary);
}

#team a,
#pastEvents a,
#contact a {
  transition: all ease 0.3s;
  border: 2px solid #fff;
  padding-left: 20px !important;
  padding-right: 20px !important;
  background-color: var(--bs-dark);
  background: url(https://www.letloosechicago.com/wp-content/uploads/2021/11/chalk-bg-small.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  filter: drop-shadow(2px 4px 6px black);
}

#team a:hover,
#pastEvents a:hover,
#contact a:hover,
#team a:active,
#pastEvents a:active,
#contact a:active,
#team a:focus,
#pastEvents a:focus,
#contact a:focus {
  transform: scale(1.05);
  background: var(--bs-secondary);
  color: var(--bs-dark) !important;
  border: 2px solid var(--bs-dark);
  box-shadow: 0px 0px 50px var(--bs-secondary);
}

#eventDate p {
  display: inline-block;
  background: var(--bs-dark);
  border: 2px solid #fff;
  padding-left: 15px;
  padding-right: 15px;
  margin-bottom: 0;
  background: url(https://www.letloosechicago.com/wp-content/uploads/2021/11/chalk-bg-small.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

// #eventDate p {
//   margin-bottom: 0;
// }

#eventDate i {
  font-style: normal;
  color: var(--bs-secondary);
}
/* ... */

